latest client portal and line commander

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/CampaignPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/CampaignPerf.cshtml
@@ -1,4 +1,5 @@
-﻿@model ClientPortal.Web.Models.SearchReportModel
+﻿
+@model ClientPortal.Web.Models.SearchReportModel
 
 <div style="height: 40px;">
     <select style="width: 140px" id="campaignperf_dateRangeSel" onchange="ChangeDateRange('campaignperf')">
