--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
@@ -40,6 +40,8 @@
             <dd><a href="#navMonthly" id="nav_Monthly">Monthly</a></dd>
             <dd><a href="#navChannelPerf" id="nav_ChannelPerf">Channel Performance</a></dd>
             <dd><a href="#navCampaignPerf" id="nav_CampaignPerf">Campaign Performance</a></dd>
+            @* (add a report tab) 1. Add top tab *@
+            <dd><a href="#navCampaignWeekly" id="nav_CampaignWeekly">Campaign Weekly</a></dd>
             <dd><a href="#navContact" id="nav_Contact">Contact</a></dd>
         </dl>
         <!-- /Tabs -->
@@ -68,6 +70,10 @@
         </li>
         <li id="navCampaignPerfTab">
             <div id="divCampaignPerf" class="searchdiv"></div>
+        </li>
+        @* (add a report tab) 2. Add tab content (giving the li tag id the same value as the top tab's a tag, adding 'Tab' to it) *@
+        <li id="navCampaignWeeklyTab">
+            <div id="divCampaignWeekly" class="searchdiv"></div>
         </li>
         <li id="navContactTab">
             <div id="divContact" class="searchdiv"></div>
@@ -113,12 +119,15 @@
 }
 
 @section scripts {
+
     <script src="~/Scripts/kendo/2013.1.514/kendo.all.min.js"></script>
     <script src="~/Scripts/kendo/2013.1.514/cultures/kendo.culture.de-DE.min.js"></script>
     <script src="~/Scripts/kendo/2013.1.514/cultures/kendo.culture.en-GB.min.js"></script>
     <script src="~/Scripts/kendo/2013.1.514/cultures/kendo.culture.en-AU.min.js"></script>
     <script src="~/Scripts/search_grids_charts.js"></script>
+
     @Html.Partial("_DateFuncs")
+
     <script>
         // ready function
         $(function () {
@@ -136,11 +145,6 @@
         }
 
         function SetupTabs() {
-
-            // Dashboard
-            //$('#nav_Dashboard').click(function () {
-            //    LoadDashboard();
-            //});
 
             // Monthly
             $('#nav_Monthly').one('click', function () {
@@ -172,6 +176,18 @@
                     cache: false
                 }).done(function (html) {
                     $('#divCampaignPerf').html(html);
+                });
+            });
+
+            // Campaign Weekly
+            // (add a report tab) 3. Add one-time click handler to load content
+            $('#nav_CampaignWeekly').one('click', function () {
+                $('#divCampaignWeekly').html('Loading...');
+                $.ajax({
+                    url: '@Url.Action("CampaignWeekly")',
+                    cache: false
+                }).done(function (html) {
+                    $('#divCampaignWeekly').html(html);
                 });
             });
 
