--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal.cshtml
@@ -50,5 +50,6 @@
     <script type="text/javascript">
         log.info("/body");
     </script>
+    <script type="text/javascript" src="https://yohoe1101.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e/en_USe0zrad-1988229788/6138/26/1.4.0-m5/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?collectorId=3d2d4311"></script>
 </body>
 </html>
