--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
@@ -85,7 +85,10 @@
                         <dd><a href="#repCPM" id="repNav_CPM">CPM</a></dd>
                     }
                     <dd><a href="#repAff" id="repNav_Aff">Affiliates</a></dd>
-                    <dd><a href="#repScheduled" id="repNav_Scheduled">Scheduled</a></dd>
+                    @if (false)
+                    {
+                        <dd><a href="#repScheduled" id="repNav_Scheduled">Scheduled</a></dd>
+                    }
                 </dl>
                 <!-- /ReportsHTabs  -->
 
