--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_DateFuncs.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_DateFuncs.cshtml
@@ -22,15 +22,15 @@
                 break;
             case "wtd":
                 $(startId).val('@Model.FirstOfWeek');
-                $(endId).val('@Model.Today');
+                $(endId).val('@Model.Latest');
                 break;
             case "mtd":
                 $(startId).val('@Model.FirstOfMonth');
-                $(endId).val('@Model.Today');
+                $(endId).val('@Model.Latest');
                 break;
             case "ytd":
                 $(startId).val('@Model.FirstOfYear');
-                $(endId).val('@Model.Today');
+                $(endId).val('@Model.Latest');
                 break;
             case "lastweek":
                 $(startId).val('@Model.FirstOfLastWeek');
